syntax = "proto2";

package api;

import "google/protobuf/descriptor.proto";

option go_package = "/api";

message FieldRules {
  optional string const = 1;
  optional string lt = 2;
  optional string le = 3;
  optional string gt = 4;
  optional string ge = 5;
  repeated string in = 6;
  repeated string not_in = 7;
  optional string len = 8;
  optional string min_size = 9;
  optional string max_size = 10;
  optional string pattern  = 11;
  optional string prefix   = 12;
  optional string suffix   = 13;
  optional string contains = 14;
  optional string not_contains = 15;
  optional string defined_only = 16;
  optional string no_sparse = 17;
  optional FieldRules key = 18;
  optional FieldRules value = 19;
  optional FieldRules elem = 20;
  optional string skip = 21;
  optional string required = 22;
  optional string not_nil = 23;
  optional string assert = 24;
}

extend google.protobuf.FieldOptions {
  optional string raw_body = 50101;
  optional string query = 50102;
  optional string header = 50103;
  optional string cookie = 50104;
  optional string body = 50105;
  optional string path = 50106;
  optional string vd = 50107;
  optional string form = 50108;
  optional string go_tag = 51001;
  optional string js_conv = 50109;
  optional FieldRules vt = 50110;
}

extend google.protobuf.MethodOptions {
  optional string get = 50201;
  optional string post = 50202;
  optional string put = 50203;
  optional string delete = 50204;
  optional string patch = 50205;
  optional string options = 50206;
  optional string head = 50207;
  optional string any = 50208;
  optional string gen_path = 50301; // The path specified by the user when the client code is generated, with a higher priority than api_version
  optional string api_version = 50302; // Specify the value of the :version variable in path when the client code is generated
  optional string tag = 50303; // rpc tag, can be multiple, separated by commas
  optional string name = 50304; // Name of rpc
  optional string api_level = 50305; // Interface Level
  optional string serializer = 50306; // Serialization method
  optional string param = 50307; // Whether client requests take public parameters
  optional string baseurl = 50308; // Baseurl used in ttnet routing
  optional string handler_path = 50309; // handler_path specifies the path to generate the method
}

extend google.protobuf.EnumValueOptions {
  optional int32 http_code = 50401;
}

extend google.protobuf.MessageOptions {
  optional FieldRules msg_vt = 50111;
}